--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="main">
         <div id="time" class="time">12:00</div>
         <div class="greeting">Hi</div>
-        <div class="todo">today's work</div>
+        <div class="todo">Life is all about timing</div>
     </div>
     <div class="quote">
         <div id="author" class="author">- author -</div>
